error_docs addet

--- a/go/loader/go_config.json
+++ b/go/loader/go_config.json
@@ -1,6 +1,6 @@
 [
     {
-        "title": "Vensin -> Dcacc",
+        "title": "Vensin -> Discord-Account",
         "description": "Developer nothing more",
         "url": "https://discord.com/users/531896089096486922",
         "image": "https://avatars.githubusercontent.com/u/51481323?v=4",
